# cinder-agent-poc

./: .gitignore  README.rst  requirements.txt  setup.cfg  tox.ini
cinderagent/: api.py  app.py  context.py  exceptions.py  i18n.py  policy.py  utils.py
etc/cinderagent/: rootwrap.conf
etc/cinderagent/rootwrap.d/: rootwrap.filters
