[metadata]
name = cinderagent
version = 1.0
summary = OpenStack Cinder Agent
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    cinderagent

[entry_points]
console_scripts =
    cinderagent-rootwrap = oslo_rootwrap.cmd:main

[egg_info]
tag_build = 
tag_date = 0
tag_svn_revision = 0

